@@ -8,7 +8,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: encoding.test,v 1.11 2002/04/08 09:02:19 das Exp $
+# RCS: @(#) $Id: encoding.test,v 1.12 2002/05/07 15:54:40 msofer Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -372,7 +372,7 @@ test encoding-24.1 {EscapeFreeProc on open channels} {exec} {
 	gets $f
     }
     close $f
-    exec [list $::tcltest::tcltest] iso2022.tcl
+    exec $::tcltest::tcltest iso2022.tcl
 } {}
 
 test encoding-24.2 {EscapeFreeProc on open channels} {exec} {
@@ -384,7 +384,7 @@ test encoding-24.2 {EscapeFreeProc on open channels} {exec} {
 	exit
     }
     close $f
-    viewable [exec [list $::tcltest::tcltest] iso2022.tcl]
+    viewable [exec $::tcltest::tcltest iso2022.tcl]
 } "ab\x1b\$B8C\x1b\$(DD%\x1b(Bg (ab\\u001b\$B8C\\u001b\$(DD%\\u001b(Bg)"
 
 test encoding-24.3 {EscapeFreeProc on open channels} {exec} {
